# sdc_time_tracker

./: .gitignore  LICENSE  README.md  gen_cert.py  main.py  pyproject.toml  requirements.txt  run.py  setup_test_user.py  take_screenshots.py
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py
app/routes/: admin.py  auth.py  dashboard.py  leave.py  quick_action.py  reports.py  time_entry.py
app/services/: audit.py  email.py  scheduler.py  settings.py  time_calc.py
app/static/: lockheed_weapons.json
app/static/css/: app.css
app/static/js/: app.js  onscreen_input.js
app/templates/: admin.html  admin_config.html  admin_timesheet.html  audit.html  base.html  dashboard.html  innovations.html  leave.html  login.html  offsite.html  offsite_gap.html  partial_leave.html  past_day.html  reports.html  reset_pin.html  time_entry.html
docs/user_manual/: user_manual.md
