[project]
name = "sdc-time-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]
